--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-host=cdmdb.csy9iho6q51b.us-west-2.rds.amazonaws.com
-username=cdmtest
-password=cdmtest12
-dbname=cdmdb
+host=clonedmruduladb.cs7kcp3aejhl.us-west-2.rds.amazonaws.com
+username=Mrudula
+password=Mrudula123
+dbname=RDSMrudulaDB
